[package]
name = "wallet-dogfood-by-dphil"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.3"
alloy-signer-local = { version = "1.0.3", features = ["eip712"] }
anyhow = "1.0.98"
dotenvy = "0.15.7"
jsonrpsee = { version = "0.25.1", features = ["http-client", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.45.0", features = ["full"] }
